分两次扫描，第一次只插入媒体文件的路径到数据库，第二次扫描再把所有信息跟新到数据库

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -29,7 +29,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:onClick="buttonlisten"
-        android:text="Button"
+        android:text="扫描"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.908"
@@ -64,6 +64,7 @@
         android:layout_width="75dp"
         android:layout_height="44dp"
         android:layout_marginBottom="44dp"
+        android:onClick="last_button"
         android:text="上一首"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/reset"
@@ -76,6 +77,7 @@
         android:id="@+id/play_pause"
         android:layout_width="61dp"
         android:layout_height="45dp"
+        android:onClick="play_pause_button"
         android:text="播放"
         app:layout_constraintBottom_toTopOf="@+id/reset"
         app:layout_constraintEnd_toEndOf="parent"
@@ -88,6 +90,7 @@
         android:layout_width="62dp"
         android:layout_height="39dp"
         android:layout_marginBottom="96dp"
+        android:onClick="reset_button"
         android:text="复位"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -97,6 +100,7 @@
         android:id="@+id/next"
         android:layout_width="71dp"
         android:layout_height="45dp"
+        android:onClick="next_button"
         android:text="下一首"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -169,6 +173,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="29dp"
         android:layout_marginTop="87dp"
+        android:onClick="audiomenulist"
         android:text="菜单"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
