修正扫描机制，不扫描文件夹，只在音乐扫描的时候去插入父文件夹

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -177,8 +177,8 @@
         android:id="@+id/folderlist"
         android:layout_width="87dp"
         android:layout_height="45dp"
-        android:onClick="folderlist"
-        android:text="文件夹"
+        android:onClick="menu_button"
+        android:text="菜单"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.048"
