--- a/app/src/main/res/layout/folder.xml
+++ b/app/src/main/res/layout/folder.xml
@@ -6,7 +6,7 @@
     <LinearLayout
         android:layout_width="match_parent"
 
-        android:layout_height="90dp"
+        android:layout_height="94dp"
 
         android:layout_weight="0.10"
         android:orientation="horizontal">
@@ -14,7 +14,7 @@
         <Button
             android:id="@+id/button_up"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:onClick="folderback"
             android:text="返回上级" />
     </LinearLayout>
