--- a/app/src/main/res/layout/folder.xml
+++ b/app/src/main/res/layout/folder.xml
@@ -11,18 +11,19 @@
         android:layout_weight="0.10"
         android:orientation="horizontal">
 
+        <TextView
+            android:id="@+id/listcount"
+            android:layout_width="113dp"
+            android:layout_height="match_parent"
+            android:text="list count" />
+
         <Button
             android:id="@+id/button_up"
-            android:layout_width="560dp"
+            android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:onClick="folderback"
             android:text="返回上级" />
 
-        <TextView
-            android:id="@+id/listcount"
-            android:layout_width="163dp"
-            android:layout_height="35dp"
-            android:text="list count" />
 
     </LinearLayout>
 
