--- a/app/src/main/res/layout/video_menu.xml
+++ b/app/src/main/res/layout/video_menu.xml
@@ -1,4 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent"/>
+    android:layout_height="match_parent">
+
+    <Button
+        android:id="@+id/video_back"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:onClick="video_back_button"
+        android:text="返回上级" />
+
+    <VideoView
+        android:id="@+id/videoView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+</LinearLayout>
