--- a/app/src/main/res/layout/video_menu.xml
+++ b/app/src/main/res/layout/video_menu.xml
@@ -1,17 +1,49 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <Button
-        android:id="@+id/video_back"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:onClick="video_back_button"
-        android:text="返回上级" />
 
-    <VideoView
-        android:id="@+id/videoView"
+        android:layout_height="89dp"
+
+        android:layout_weight="0.10"
+        android:orientation="horizontal">
+
+
+        <ImageButton
+            android:id="@+id/imageButton"
+            android:layout_width="67dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:onClick="videoFavorite_button"
+            app:srcCompat="@android:drawable/btn_star_big_on" />
+
+        <Button
+            android:id="@+id/video_back"
+            android:layout_width="337dp"
+            android:layout_height="match_parent"
+            android:onClick="video_back_button"
+            android:text="返回上级" />
+    </LinearLayout>
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+
+        android:layout_height="match_parent"
+
+        android:layout_weight="0.10"
+        android:orientation="vertical"
+        >
+
+        <VideoView
+            android:id="@+id/videoView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+
+    </LinearLayout>
+
+
+
 </LinearLayout>
